2009-08-19  Andreas Radke  <andyrtr archlinux.org>

  * pidgin-2.6.1-1:
  New upstream release.

2009-06-21  Andreas Radke  <andyrtr archlinux.org>

  * pidgin-2.5.7-1:
  New upstream release.


2009-05-24  Andreas Radke  <andyrtr archlinux.org>

  * pidgin-2.5.6-1:
  New upstream release.

2009-01-31  Andreas Radke  <andyrtr archlinux.org>

  * pidgin-2.5.5-1:
  New upstream release.

2009-01-31  Alexander Fehr  <pizzapunk gmail com>

  * pidgin-2.5.4-1:
  New upstream release.

2008-12-21  Alexander Fehr  <pizzapunk gmail com>

  * pidgin-2.5.3-1:
  New upstream release.
  Enabled Cyrus SASL support.
  Added dependency on python.
  Replaced make dependency on perlxml with intltool.

2008-10-25  Andreas Radke  <andyrtr@archlinux.org>

  * pidgin-2.5.2-1:
  New upstream release.

2008-08-31  Alexander Fehr  <pizzapunk gmail com>

  * pidgin-2.5.1-1:
  New upstream release.

2008-08-25  Alexander Fehr  <pizzapunk gmail com>

  * pidgin-2.5.0-2:
  New upstream release.
  New maintainer.
  Changed license to GPL.
  Use NSS instead of GnuTLS for SSL.
  Added dependency on hicolor-icon-theme.
  Added make dependency on perlxml.
  Removed make dependency on intltool.
  Replaced install message with optdepends.
  Added optional dependency on tk.
  Made dependency on ca-certificates optional.
  Removed provides and conflicts gaim.
  Removed libtool hack.
  Corrected configure option for certificates directory.
  Added --disable-doxygen configure option.
  Added ChangeLog.