@@ -1,3 +1,8 @@
+2009-09-23  Giovanni Scafora  <giovanni@archlinux.org>
+
+  * pidgin-2.6.2-1:
+  New upstream release.
+
 2009-08-19  Andreas Radke  <andyrtr archlinux.org>
 
   * pidgin-2.6.1-1:
